Fixed horizontal scrolling bug for smaller screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,11 @@ body {
 html,
 body {
   width: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+
 }
 
 code {
